--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-<img src="./images/sample.png" alt="">
-<div class="bg"></div>
+<header class="header">
+    <div class="header__logo">Stay World</div>
+    <div class="hamburger">
+        <span class="hamburger__line"></span>
+    </div>
+</header>
+
 </body>
 </html>
