[feat] SPメニュータブ作成

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,22 @@
     <title>Document</title>
 </head>
 <body>
+
+<ul class="menu">
+    <li class="menu__list">ああああ</li>
+    <li class="menu__list">いいい</li>
+    <li class="menu__list">ううう</li>
+</ul>
+<div class="main js-main">
 <header class="header">
     <div class="header__logo">Stay World</div>
-    <div class="hamburger">
+    <div class="hamburger js-hamburger">
+        <span class="hamburger__line"></span>
+        <span class="hamburger__line"></span>
         <span class="hamburger__line"></span>
     </div>
 </header>
 
+</div>
 </body>
 </html>
