--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,6 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link
-            href="https://unpkg.com/swiper/css/swiper.css"
-            rel="stylesheet"
-    />
     <title>Document</title>
 </head>
 <body>
@@ -33,20 +29,11 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide"><img src="./images/image-1.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="./images/image-2.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="./images/image-3.jpg" alt=""></div>
             ...
         </div>
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
-
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-
-        <!-- If we need scrollbar -->
-        <div class="swiper-scrollbar"></div>
     </div>
 
 </div>
